
2012-05-29  Vincent Torri

        * remove --disable-posix-threads and --disable-win32-threads
	from configure options, and detect automatically the threading
	support.
	Fix bug in the XML parser when a tag was in a comment or a
	cdata

2012-06-08  Mike Blumenkrantz

        * Fixed eina_str_split_full() to behave properly and be much faster

2012-06-17  Carsten Haitzler (The Rasterman)

        * Add env var EINA_MEMPOOL_PASS to force mempool to try use
        passthrough to malloc for debgging purposes and memory footrpint
        comparisons at runtime.

2012-07-01  Vincent Torri

        * Remove --enable-coverage from configure options,

2012-07-04  Vincent Torri

        * Implement eina_file_map_lines() on Windows.

2012-07-05  Raphael Kubo da Costa

	* Handle NULL in all eina_*_free function.

2012-08-01 Carsten Haitzler (The Rasterman)

        * Modify eina_prefix to deal with debian's fun new
        multiarch... if you are a shared library.

2012-08-01 Gustavo Sverzut Barbieri (k-s)

	* added eina_log_console_color_set() for cross platform console
	color set.

2012-08-14  Lucas De Marchi

        * Add EINA_SENTINEL macro to protect variadic functions

2012-08-30  Carsten Haitzler (The Rasterman)

        1.7.0 release

2012-09-12 Patryk Kaczmarek <patryk.k@samsung.com>

        * Add EINA_SAFETY checks for proper function arguments.
        * Add check if given arguments (distance and coordinates) in eina_tiler
        and eina_rectangle are not below zero
        * Documentation for eina list specified and eina stringshare fixed

2012-09-27  Carsten Haitzler (The Rasterman)

        * Fix return value of eina_mmap_safety_enabled_set() and
        ensure future eina_mmap_safety_enabled_get() return right value
        on success.

2012-10-19  Patryk Kaczmarek

	* eina_stringshare_add_length return NULL when func args are wrong.

2012-10-20  Cedric Bail

	1.7.1 release

2012-11-23 Luis Felipe Strano Moraes

        1.7.2 release
